--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,1 +1,12 @@
 # Dockerfile for a Python App
+FROM python:3.10
+
+WORKDIR /app
+
+COPY . .
+
+RUN pip3 install -r requirements.txt
+
+EXPOSE 5000
+
+ENTRYPOINT ["python3", "app.py"]
